log
Wed, Mar 19, 2025  8:46:59 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:11:21 AM: 
 exercises.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
ac28006
Wed, Mar 19, 2025  9:32:00 AM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
10d1787
ju., 20 de mar. de 2025 15:27:23: 
 tests:  2|3
total_score: 20/70
2b7c072
ju., 20 de mar. de 2025 20:56:21: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e2b54f1
ju., 20 de mar. de 2025 21:06:31: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
0dbada7
ju., 20 de mar. de 2025 21:07:21: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|2
total_score: 40/70
1286247
vi., 21 de mar. de 2025 23:01:31: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
49fef7e
vi., 21 de mar. de 2025 23:04:07: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
3ace8b4
do., 23 de mar. de 2025 12:57:01: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:135:8: error: unused variable 'i' [-Werror=unused-variable]
    int i = 0;
        ^
exercises.c:134:11: error: unused variable 'P' [-Werror=unused-variable]
    Stack* P = create_stack();
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
7904567
do., 23 de mar. de 2025 16:06:47: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  0|0
420359a
do., 23 de mar. de 2025 16:08:14: 
 exercises.c | 18 ------------------
 1 file changed, 18 deletions(-)
 tests:  4|1
total_score: 50/70
2f24c5f
do., 23 de mar. de 2025 16:09:03: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  7|1
total_score: 60/70
a7ffe90
do., 23 de mar. de 2025 16:10:52: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
480c106
do., 23 de mar. de 2025 16:11:16: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:156:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
23afae4
do., 23 de mar. de 2025 16:12:31: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 60/70
6740b6d
do., 23 de mar. de 2025 16:16:23: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
867f339
do., 23 de mar. de 2025 16:25:45: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
cf33905
